# invoke

./: .codespellrc  .coveragerc  .deepsource.toml  .flake8  .gitignore  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  Makefile  README  README.rst  THOUGHTS.rst  TODO  appveyor.yml  dev-requirements.txt  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tasks-requirements.txt  tasks.py  tox.ini
.circleci/: config.yml
appveyor/: install.ps1
completion/: bash  fish  zsh
design/: execution.rst
docs/: changelog.rst  concepts.rst  conf.py  contributing.rst  faq.rst  getting_started.rst  index.rst  prior_art.rst
docs/api/: cli.rst  collection.rst  context.rst  exceptions.rst  executor.rst  loader.rst  parser.rst  runner.rst  tasks.rst  util.rst
docs/api/parser/: argument.rst  context.rst  parser.rst
docs/concepts/: cli.rst  collections.rst  context.rst  execution.rst  loading.rst  namespaces.rst
docs/concepts/cli/: background.rst  execution.rst  intro.rst  type_mapping.rst
fluidity/: __init__.py  machine.py
integration/: _explicit.py  _util.py  context.py  main.py  runners.py  tasks.py
integration/_support/: busywork.py  nested_or_piped.py  parsing.py  regression.py  respond.py  respond_base.py  respond_both.py  respond_fail.py  signal_tasks.py  signaling.py  tasks.py
integration/_support/package/tasks/: __init__.py  module.py  pytest.py
invoke/: __init__.py  __main__.py  _types.py  _version.py  checks.py  cli.py  collection.py  compat.py  complete.py  config.py  context.py  env.py  exceptions.py  executor.py  loader.py  main.py  monkey.py  parser.py  plat.py  platform.py  program.py  run.py  runner.py  runners.py  shims.py  task.py  tasks.py  termcolor.py  terminals.py  util.py  watchers.py
invoke/completion/: bash  complete.py  fish  zsh
invoke/parser/: __init__.py  argument.py  context.py  parser.py
invoke/runners/: __init__.py  base.py  dummy.py  local.py
sites/: alpha.rst  shared_conf.py
sites/docs/: .readthedocs.yaml  api.rst  cli.rst  conf.py  contributing.rst  getting-started.rst  getting_started.rst  index.rst  invoke.rst
sites/docs/api/: __init__.rst  checks.rst  cli.rst  collection.rst  config.rst  context.rst  exceptions.rst  executor.rst  loader.rst  parser.rst  platform.rst  program.rst  runner.rst  runners.rst  tasks.rst  terminals.rst  util.rst  watchers.rst
sites/docs/api/parser/: argument.rst  context.rst  parser.rst
sites/docs/api/runners/: base.rst  dummy.rst  local.rst
sites/docs/concepts/: cli.rst  configuration.rst  context.rst  execution.rst  invoking-tasks.rst  library.rst  loading.rst  namespaces.rst  responses.rst  tasks_in_classes.rst  testing.rst  watchers.rst
sites/docs/concepts/cli/: background.rst  intro.rst  type_mapping.rst
sites/www/: .readthedocs.yaml  changelog.rst  conf.py  contact.rst  development.rst  faq.rst  features.rst  index.rst  installing.rst  prior-art.rst  prior_art.rst
spec/: action_spec.py  callable_support_spec.py  callback_order_spec.py  configuration_spec.py  event_parameters_spec.py  event_spec.py  fluidity_spec.py  guard_spec.py  individuation_spec.py  one_event_multiple_transitions_spec.py  state_action_spec.py  state_spec.py  transition_action_spec.py
src/invoke/: __init__.py  _version.py  collection.py  config.py  context.py  env.py  exceptions.py  executor.py  program.py  runners.py  tasks.py  watchers.py
src/invoke/completion/: complete.py
src/invoke/parser/: argument.py  context.py
test-taskfiles/: issue-459.py
tests/: _shims.py  _util.py  _utils.py  argument.py  cli.py  collection.py  completion.py  concurrency.py  config.py  conftest.py  context.py  executor.py  init.py  integration.py  invoke_program.py  loader.py  merge_dicts.py  parser.py  parser_argument.py  parser_context.py  parser_parser.py  platform.py  program.py  run.py  runner.py  runners.py  task.py  tasks.py  termcolor.py  terminals.py  timeout.py  util.py  watchers.py
tests/_support/: alias_sorting.py  autoprint.py  contextualized.py  custom_executor.py  debugging.py  decorator.py  decorator_multi_default.py  decorators.py  deeper_ns_list.py  depth_first.py  docstrings.py  empty.py  empty_subcollection.py  err  explicit_root.py  fail.py  foo.py  has_modules.py  integration.py  namespacing.py  nontrivial_docstrings.py  oops.py  pty_output.py  simple_ns_list.py  subcollection_task_name.py  sudo_prompt.py  tasks.py  tree.json  tree.out  tree.py
tests/_support/branch/: explicit.py  tasks.py
tests/_support/configs/: collection.py  echo.yaml  global.yaml  mixed.py  no-dedupe.yaml  no-dependencies.yml  no-echo.yaml  pyglobal.py  runtime.py
tests/_support/configs/all-four/: invoke.json  invoke.py  invoke.yaml
tests/_support/configs/global/yaml-only/: invoke.yaml
tests/_support/configs/json/: invoke.json
tests/_support/configs/nested/: invoke.yaml
tests/_support/configs/package/: invoke.yml
tests/_support/configs/package/tasks/: __init__.py
tests/_support/configs/project/: invoke.yaml
tests/_support/configs/project/json-only/: invoke.json
tests/_support/configs/project/py-only/: invoke.py
tests/_support/configs/project/yaml-only/: invoke.yaml  tasks.py
tests/_support/configs/python/: invoke.py
tests/_support/configs/runtime/: runtime.yaml  tasks.py
tests/_support/configs/three-of-em/: invoke.yml
tests/_support/configs/underscores/: invoke.yaml  tasks.py
tests/_support/configs/user/json-only/: .invoke.json
tests/_support/configs/user/python-only/: .invoke.py
tests/_support/configs/user/yaml-only/: .invoke.yaml
tests/_support/configs/yaml/: explicit.py  invoke.yaml  tasks.py
tests/_support/configs/yml/: explicit.py  invoke.yml  tasks.py
tests/_support/entry_point/: pyproject.toml
tests/_support/implicit/: tasks.py
tests/_support/package/: module.py
tests/_support/subspace/: __init__.py
tests/_support/syspathmodule/: __init__.py  foo.py
tests/_support/tree/: __init__.py  deploy.py  provision.py
tests/parser/: argument.py  context.py  parser.py
tests/runners/: _util.py  base.py  local.py
