[build-system]
requires = ['setuptools>=61.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = "invoke-example"
version = "0.1.0"
description = "Example project using entry point with invoke."
requires-python = ">=3.7"
dependencies = [
    "invoke"
]

[project.entry-points."invoke"]
test = "example.module:namespace"
